--- a/about.html
+++ b/about.html
@@ -64,18 +64,16 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
 
   </div>
 
 
-  <!-- about section -->
   <section class="about_section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="Community outreach">
+            <img src="images/hero2.jpeg" alt="Community outreach">
           </div>
         </div>
         <div class="col-md-5 col-lg-4">
@@ -111,12 +109,6 @@
     </div>
   </section>
 
-  <!-- end about section -->
-
-
-
-
-  <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
       <div class="info_form">
@@ -185,22 +177,16 @@
     </div>
   </section>
 
-  <!-- end info_section -->
-
-  <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
       &copy; 2024 Transits Global Charity. All Rights Reserved.
     </p>
   </section>
-  <!-- footer section -->
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
 
   <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
     function initMap() {
       var map = new google.maps.Map(document.getElementById("map"), {
         zoom: 11,
@@ -221,12 +207,8 @@
       });
     }
   </script>
-  <!-- google map js -->
-
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
   </script>
-  <!-- end google map js -->
-
   <script>
     function openNav() {
       document.getElementById("myNav").style.width = "100%";
