--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/hero2.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-5 col-lg-4">
